Closed Bug 30887 Opened 26 years ago Closed 26 years ago

Double-click Next in new acct wizard crashes

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: laurel, Assigned: waterson)

Details

(Keywords: crash, platform-parity, Whiteboard: [PDT+] w/b minus on 3/8. fix ready)

Attachments

(2 files)

Using 2000-03-07-09m15 commercial build on NT 4.0 Can't reproduce on linux or mac When in new account wizard, a double-click (by accident, of course) on a Next button causes a crash. 1. From mail window, Edit|Account Settings. 2. Click New Account to bring up new account wizard. 3. Select mail account, click Next to get to the next panel. 4. When in next panel, double-click the Next button. Result: crash occurs. Note: I believe the crash may only happen when double-clicking in a panel where incorrect/insufficient information has been entered which would cause an alert dialog to come up.
.
Assignee: phil → alecf
QA Contact: lchiang → laurel
Nevermind what I said above about the alert dialog. It crashes even when on the last couple panels with everything filled in properly.
Keywords: crash
Keywords: pp
wierd. thanks for the stack trace, this looks like something is getting funky when overlays get interrupted or something. assigning to waterson, cc hyatt. The Next button loads new content in the account wizard's IFRAME, double clicking probably results in trying to load another document before the current one is completely loaded.
Assignee: alecf → waterson
The fix is trivial. Make sure we check mDocument before dereferencing it in nsXULElement::SetAttribute(). PDT: I think we should get this in for Beta1. This fix is a no-brainer, and there have been other reports of this bug on the newsgroups. Whenever you try to set the 'style' attribute on a XUL element that is not in the DOM, you crash.
Status: NEW → ASSIGNED
Keywords: beta1
Target Milestone: M15
Whiteboard: fix ready
[PDT+] w/b minus on 3/8 for trivial fix in hand
Whiteboard: fix ready → [PDT+] w/b minus on 3/8. fix ready
fix checked in, r=hyatt a=jar
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
woah, that was fast. Thanks chris.
OK using 2000-03-08-13m15 commercial build on NT 4.0
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: