Bug 30887. Check mDocument before dereferencing to update style rule. Happens when setting 'style' attribute on an element that is not in the doc tree. r=hyatt, a=jar.